fix double scroll?

--- a/src/detail-panels/layout.css
+++ b/src/detail-panels/layout.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-@media (width >=801px) {
+@media (width >= 801px) {
   .layout {
     flex-direction: row;
   }
@@ -17,12 +17,18 @@
     flex-grow: 1;
     overflow-y: auto;
   }
+
+  .account-tabs-content {
+    /* max-height: 80em; */
+    overflow-y: auto;
+    scroll-behavior: smooth;
+  }
 }
 
 @media (width <= 800px) {
   .layout {
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
@@ -105,11 +111,7 @@
 }
 
 .account-tabs-content {
-  position: relative;
   border-left: none;
-  max-height: 80em;
-  overflow-y: auto;
-  scroll-behavior: smooth;
 }
 
 .account-tabs-content .account-tab {
